vbnc/vbnc/tests/Errors/30074-2.vb
Option Strict On
Class A
    Shared Sub Main()
        Const i As Integer = 2
        i = 3
    End Sub
End Class